# RayTracer

./: .gitignore  CMakeLists.txt  README.md  listObjet  makefile
data/: scene_size.scn  test_ellipsoid.scn  test_elliptic_cone.scn  test_elliptic_cylinder.scn  test_mat.scn  test_mirror.scn  test_ombre.scn  test_parser.scn  test_parser.scn~  test_rectangle_rot.scn  test_transparence.scn
include/: BoundingVolume.hpp  Camera.hpp  Cone.hpp  Cylinder.hpp  Geometry.hpp  Gui.hpp  Light.hpp  MaterialPoint.hpp  Materiaux.hpp  Matrice.hpp  Object.hpp  ObjectGenerator.hpp  Objet.hpp  PPMExporter.hpp  ParentPointVector.hpp  Parser.hpp  Point.hpp  Ray.hpp  RayTracer.hpp  Rectangle.hpp  Scene.hpp  Shape.hpp  ShapeGenerator.hpp  Sphere.hpp  Tetraedre.hpp  Triangle.hpp  Vector.hpp  geometry.hpp
src/: BoundingVolume.cpp  Camera.cpp  Cone.cpp  Cylinder.cpp  Geometry.cpp  Gui.cpp  Light.cpp  Main.cpp  MaterialPoint.cpp  Materiaux.cpp  Matrice.cpp  Object.cpp  ObjectGenerator.cpp  Objet.cpp  PPMExporter.cpp  ParentPointVector.cpp  Parser.cpp  Parser.hpp  Point.cpp  Ray.cpp  RayTracer.cpp  Rectangle.cpp  Scene.cpp  Shape.cpp  ShapeGenerator.cpp  Sphere.cpp  Tetraedre.cpp  Triangle.cpp  Vector.cpp  geometry.cpp  geometry.hpp
